--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
