--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-tag-input": "^6.8.1",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.0",
