--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "highcharts": "^11.0.0",
+    "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
