--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "highcharts": "^11.0.0",
     "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.5",
