--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "cloudinary": "^1.36.4",
     "dayjs": "^1.11.7",
     "highcharts": "^11.0.0",
     "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -34,6 +37,7 @@
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
