--- a/package.json
+++ b/package.json
@@ -10,35 +10,49 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@react-pdf/renderer": "^3.1.9",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
+    "buffer": "^6.0.3",
     "cloudinary": "^1.36.4",
+    "csv-parser": "^3.0.0",
     "dayjs": "^1.11.7",
+    "events": "^3.3.0",
+    "file-saver": "^2.0.5",
+    "formik": "^2.2.9",
     "highcharts": "^11.0.0",
     "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.5",
+    "js-file-download": "^0.4.12",
+    "json2csv": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.9",
     "react-material-ui-carousel": "^3.4.2",
+    "react-paginate": "^8.2.0",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-tag-input": "^6.8.1",
     "react-toastify": "^9.1.2",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.0",
     "uuidv4": "^6.2.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
